--- a/web/css/win.css
+++ b/web/css/win.css
@@ -910,8 +910,9 @@ width:20%;
 .availResourceStatus {
 padding-top:3px;
 padding-bottom:3px;
-text-align:center;
+text-align:left;
 border-bottom:1px solid #D5D8DE;
+white-space:  nowrap;
 }
 
 #rowOrder {
