--- a/ui_plugins/public/hqu.css
+++ b/ui_plugins/public/hqu.css
@@ -1,21 +1,26 @@
 #alert	table {
 			font-family:Lucida Grande, Verdana;
-			font-size:0.8em;
+			font-size:11px;
 			width:100%;
 			border:1px solid #ccc;
 			border-collapse:collapse;
 			cursor:default;
 		}
-		#alert	table td,
-		#alert	table th{
-			padding:2px;
+        #alert table th {
+           font-weight:bold;
+            padding:3px;
+            padding-left:5px;
+        }
+        #alert	table td {
+			padding:3px;
 			font-weight:normal;
-		}
+            padding-left:5px;
+        }
 		#alert	table thead td, table thead th {
 			background-image:url("images/ft-head.gif");
 			background-repeat:no-repeat;
 			background-position:top right;
-		}
+        }
 		#alert	table thead td.selectedUp, table thead th.selectedUp {
 			background-image:url("images/ft-headup.gif");
 		}
@@ -25,18 +30,18 @@
 
 		#alert	table tbody tr td{
 			border-bottom:1px solid #ddd;
-		}
+        }
 		#alert	table tbody tr.alt td{
 			background: #e3edfa;
 		}
 		#alert	table tbody tr.selected td{
-			background: yellow;
+
 		}
 		#alert	table tbody tr:hover td{
 			background: #a6c2e7;
 		}
 		#alert	table tbody tr.selected:hover td{
-			background:#ff9;
+			
 		}
 
 		#inputArea{
