adding string check to see if an alert in the alert center has been fixed, if not the table row will be red (support request)

--- a/ui_plugins/public/hqu.css
+++ b/ui_plugins/public/hqu.css
@@ -32,7 +32,7 @@
 			border-bottom:1px solid #ddd;
         }
 		#alert	table tbody tr.alt td{
-			background: #e3edfa;
+			background: #eef4fc;
 		}
 		#alert	table tbody tr.selected td{
 
