adding highligh of row for unfixed alerts in the alert center and a border top to the columns

--- a/ui_plugins/public/hqu.css
+++ b/ui_plugins/public/hqu.css
@@ -1,78 +1,88 @@
 #alert	table {
-			font-family:Lucida Grande, Verdana;
-			font-size:11px;
-			width:100%;
-			border:1px solid #ccc;
-			border-collapse:collapse;
-			cursor:default;
-		}
-        #alert table th {
-           font-weight:bold;
-            padding:3px;
-            padding-left:5px;
-            border-right:1px solid #7bafff;
-        }
-        #alert	table td {
-			padding:3px;
-			font-weight:normal;
-            padding-left:5px;
-        }
-		#alert	table thead td, table thead th {
-			background-image:url("images/ft-head.gif");
-			background-repeat:no-repeat;
-			background-position:top right;
-        }
-		#alert	table thead td.selectedUp, table thead th.selectedUp {
-			background-image:url("images/ft-headup.gif");
-		}
-		#alert	table thead td.selectedDown, table thead th.selectedDown {
-			background-image:url("images/ft-headdown.gif");
-		}
+    font-family: Lucida Grande, Verdana;
+    font-size: 11px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    cursor: default;
+}
 
-		#alert	table tbody tr td{
-			border-bottom:1px solid #ddd;
-        }
-		#alert	table tbody tr.alt td{
-			background: #eef4fc;
-		}
-		#alert	table tbody tr.selected td{
+#alert table th {
+    font-weight: bold;
+    padding: 3px;
+    padding-left: 5px;
+    border-right: 1px solid #7bafff;
+    border-top: 1px solid #7bafff;
+}
 
-		}
-		#alert	table tbody tr:hover td{
-			background: #a6c2e7;
-		}
-		#alert	table tbody tr.selected:hover td{
-			
-		}
+#alert	table td {
+    padding: 3px;
+    font-weight: normal;
+    padding-left: 5px;
+}
 
-		#inputArea{
-			margin:1em 0;
-			padding:1em;
-			background-color:#eef;
-		}
-		#updateTestInput{
-			border:1px solid #ccc;
-			width:100%;
-			height:80px;
-			font-family:serif;
-			font-size:0.9em;
-			overflow:auto;
-		}
+#alert	table thead td, table thead th {
+    background-image: url( "images/ft-head.gif" );
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+
+#alert	table thead td.selectedUp, table thead th.selectedUp {
+    background-image: url( "images/ft-headup.gif" );
+}
+
+#alert	table thead td.selectedDown, table thead th.selectedDown {
+    background-image: url( "images/ft-headdown.gif" );
+}
+
+#alert	table tbody tr td {
+    border-bottom: 1px solid #ddd;
+}
+
+#alert	table tbody tr.alt td {
+    background: #eef4fc;
+}
+
+#alert	table tbody tr.selected td {
+
+}
+
+#alert	table tbody tr:hover td {
+    background: #a6c2e7;
+}
+
+#alert	table tbody tr.selected:hover td {
+
+}
+
+#inputArea {
+    margin: 1em 0;
+    padding: 1em;
+    background-color: #eef;
+}
+
+#updateTestInput {
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 80px;
+    font-family: serif;
+    font-size: 0.9em;
+    overflow: auto;
+}
 
 .pageCont {
- padding-bottom:5px;
- padding-top:5px;
- background:#eff0f2;
- border-top:1px solid #D5D8DE;
-     border-right:1px solid #D5D8DE;
-     border-left:1px solid #D5D8DE;
- 
+    padding-bottom: 5px;
+    padding-top: 5px;
+    background: #eff0f2;
+    border-top: 1px solid #D5D8DE;
+    border-right: 1px solid #D5D8DE;
+    border-left: 1px solid #D5D8DE;
 }
 
 .pageButtonCont {
-    display:block;
-    position:relative;
-    float:right;
+    display: block;
+    position: relative;
+    float: right;
 }
 
 #pageLeft {
@@ -81,10 +91,10 @@
     float: left;
 }
 
- .previousLeft {
+.previousLeft {
     background-position: top left;
     background-image: url( "images/page_left.gif" );
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .noprevious {
@@ -101,7 +111,7 @@
 .nextRight {
     background-position: top left;
     background-image: url( "images/page_right.gif" );
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .nonext {
@@ -114,15 +124,14 @@
     display: block;
     padding-left: 5px;
     padding-right: 5px;
-    padding-top:5px;
+    padding-top: 5px;
     float: left;
 }
 
 .alertHighlight {
-    color: #fa8672;
-    font-weight:bold;
+    background-color: #fa8672;
 }
 
 .boldText {
-   font-weight:bold;
+    font-weight: bold;
 }
